--- a/src/sass/_var.scss
+++ b/src/sass/_var.scss
@@ -1,4 +1,3 @@
-$app-width: 100vw;
 $app-height: 100vh;
 $default-font-size: 1.3rem;
 
